tdf#128413 SetSnapRect of custom shapes expects logic rect input

SdrObjCustomShape has its own version of SetSnapRect. This expects
the new logic rectangle in its input parameter. That was not
considered in methods SetVerticalWriting(), Undo() and Redo().
The result was, that for rotated or sheared shapes which has text,
undo/redo of line or filling changes, extrusion or shadow, and
setting tb-rl writing mode, changes size and position.

Change-Id: Iba1021121e453c99ae1677a7482fc56bc83235c8